# AdlerIT

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  quickstart.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  defender-smoke-test.yml  release.yml  security-audit.yml
Scripts/: build-windows-gui.ps1  generate-release-notes.sh  version.ps1
src/: app.rs  lib.rs  main.rs  theme.rs
src/platform/: win32_app.rs
