[package]
name = "adlerit"
version = "0.2.0"
edition = "2024"
description = "A focused Adler-32 calculator for desktop and command line"
license = "AGPL-3.0-only"
default-run = "adlerit"

[dependencies]
adler2 = "2.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
# Use wgpu instead of the OpenGL-only glow backend. On Windows this gives eframe
# access to Direct3D 12 (and its software fallback) rather than requiring a
# working vendor OpenGL driver just to open the application window.
eframe = { version = "0.34.3", default-features = false, features = ["default_fonts", "wgpu", "wayland", "x11"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
